--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "tsc --watch",
     "develop": "webpack-dev-server --mode development",
     "build": "rm -rf ./dist && tsc && webpack",
-    "prepare": "echo \"$PWD\" && lint-staged && yarn build",
+    "prepare": "yarn build",
     "deploy": "yarn prepare && gh-pages -d examples/dist",
     "precommit": "lint-staged",
     "prettify": "prettier --write './src/**/*.{js,jsx,ts,tsx,json,css,md}'"
